# orchestration

./: .gitignore  README.md  pyproject.toml  requirements.txt
caduceus/: constants.py  container.py  dag.py  docker_client.py  edge.py  node.py
caduceus/experimentation/common_volume/: readme.md
caduceus/experimentation/test_dockers/caduceus-base/: Dockerfile
caduceus/experimentation/test_dockers/nodeD/: Dockerfile
docker/jupyter/: Dockerfile
mercury/: constants.py  container.py  dag.py  edge.py  node.py
mercury/experimentation/test_dockers/nodeA/: Dockerfile
mercury/experimentation/test_dockers/nodeB/: build.sh
mercury/experimentation/test_dockers/nodeC/: Dockerfile
orchestrator/: node.py
orchestrator/experimentation/: build_test_dockers.sh
orchestrator/experimentation/test_dockers/nodeB/: Dockerfile
server/: app.py  swagger.py  views.py
server/views/: __init__.py  connector.py  dag.py  edge.py  node.py  utils.py  workflow.py
