[tool.poetry]
name = "caduceus"
version = "0.1.0"
description = "node orchestration service for mercuri"
authors = ["Saksham Malhotra <saksham2196@gmail.com>", "Saiful Khan <saifulbkhan@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
docker = "4.4.4"
tornado = "6.1"
networkx = "2.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
