[tool.poetry]
name = "mercury-orchestration"
version = "0.1.0"
description = "Node orchestration service for Mercury"
authors = ["Saksham Malhotra <saksham2196@gmail.com>", "Saiful Khan <saifulbkhan@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
docker = "4.4.4"
tornado = "6.1"
networkx = "2.5"

[tool.poetry.dev-dependencies]
black = {version = "^21.5b1", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
